--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1> Odin recipes</h1>
+    <div class="container">
+    <h1 class = "h1-title"> Odin recipes</h1>
     <ul>
         <li><a href = "recipes/quick-whole-wheat-chapati.html"> Quick Whole Wheat Chapati </a></li>
         <li><a href = "recipes/croque-madame.html"> Croque Madame</a></li>
         <li><a href = "recipes/garlic-chilli-oil-noodles.html">Garlic Chilli Oil Noodles</a></li>
     </ul>
-    
+    </div>  
 </body>
 </html>
