Add class selectors for css

--- a/recipes/croque-madame.html
+++ b/recipes/croque-madame.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
+
     <title>Croque Madame </title>
 </head>
 <body>
+    <div class="container">
     <h1> Croque Madame  </h1>
     <img src = "https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8934841.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Quick Whole Wheat chapati">
     <h2> Description </h2>
-    <p>CA classic croque madame makes the perfect French-inspired brunch or lunch dish. Once you try this, it will be hard to have "just" a ham and cheese sandwich again. Don't cheat and use Swiss cheese, this deserves the real thing! Using Gruyère cheese will make all the difference.</p>
+    <p class="recipe-description"> CA classic croque madame makes the perfect French-inspired brunch or lunch dish. Once you try this, it will be hard to have "just" a ham and cheese sandwich again. Don't cheat and use Swiss cheese, this deserves the real thing! Using Gruyère cheese will make all the difference.</p>
+    <div class="recipe-ingredients">
     <h3> Ingredients</h3>
     <ul>
         <li>4 tablespoons salted butter, softened, divided</li>
@@ -27,6 +31,8 @@
         <li>1 tablespoon water</li>
         <li>1 teaspoon chopped fresh dill, or to taste (Optional)</li>
     </ul>
+    </div>
+    <div class="recipe-steps">
     <h3> Steps</h3>
     <ol>
         <li>Set an oven rack about 6 inches from the heat source and preheat the oven's broiler.</li>
@@ -36,6 +42,8 @@
         <li>While the sandwiches are broiling, heat remaining butter in a nonstick skillet over medium-high heat. Crack 2 eggs into the skillet, keeping them completely separate from one another. Season with salt and pepper. Add water, cover, and baste until whites are set but yolks are still runny, about 2 minutes.</li>
         <li>Top each sandwich with an egg and sprinkle with dill, if using. Serve immediately.
     </ol>
+    </div>
+    </div>
 
 </body>
 </html>
