--- a/recipes/garlic-chilli-oil-noodles.html
+++ b/recipes/garlic-chilli-oil-noodles.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
+
     <title>Garlic Chili Oil Noodles
     </title>
 </head>
 <body>
+    <div class="container">
     <h1> Garlic Chili Oil Noodles  </h1>
     <img src = "https://www.allrecipes.com/thmb/m_hMKmtcgX8c9-T-YIf43sEiFzI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/7496389_Garlic-Chili-Oil-Noodles_TheDailyGourmet_4x3-4f3f998ed52d44819901e524e0311722.jpg" alt="Garlic chilli oil noodles">
     <h2> Description </h2>
-    <p>These easy garlic chili oil noodles are not for those with a mild palate! Wok-fried garlic chili oil takes ramen noodles to a new level.</p>
+    <p class="recipe-description">These easy garlic chili oil noodles are not for those with a mild palate! Wok-fried garlic chili oil takes ramen noodles to a new level.</p>
+    <div class="recipe-ingredients">
     <h3> Ingredients</h3>
     <ul>
         <li>1 package ramen noodles </li>
@@ -22,12 +26,15 @@
            <li>1 pinch black sesame seeds</li>
            <li>2 green onions, sliced diagonally, or to taste</li>
     </ul>
+    </div>
+    <div class="recipe-steps">
     <h3> Steps</h3>
     <ol>
         <li>Bring a pot of water to a boil over high heat. Add ramen noodles, and cook until tender, 3 to 4 minutes.</li>
         <li>Meanwhile, heat sesame oil, soy sauce, and chili oil in a wok over medium-high heat.</li>
         <li>Add garlic and stir fry until fragrant, 30 to 45 seconds. Remove from heat. Drain ramen noodles, add to the wok, and toss to coat. Sprinkle with sesame seeds and scallions for garnish. Enjoy!</li>
     </ol>
-
+    </div>
+    </div>
 </body>
 </html>
