--- a/recipes/quick-whole-wheat-chapati.html
+++ b/recipes/quick-whole-wheat-chapati.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
+
     <title>Quick Whole Wheat chapati </title>
 </head>
 <body>
+    <div class="container">
     <h1> Quick Whole Wheat chapati  </h1>
     <img src = "https://www.allrecipes.com/thmb/3W-pFxFSF8HxMYch37rQzuinPCQ=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/8553184-quick-whole-wheat-chapati-Lenka-4x3-1-4b53f342050f490891486f874d0d0e03.jpg" alt="Quick Whole Wheat chapati">
     <h2> Description </h2>
-    <p>Chapati is an unleavened whole wheat bread that is eaten in India. We love to use it as a wrap</p>
+    <p class="recipe-description">Chapati is an unleavened whole wheat bread that is eaten in India. We love to use it as a wrap</p>
+    <div class = "recipe-ingredients">
     <h3> Ingredients</h3>
     <ul>
         <li>2 ½ cups whole wheat flour </li>
         <li>¾ teaspoon salt</li>
         <li>1 cup water </li>
     </ul>
+    </div>
+    <div class="recipe-steps">
     <h3> Steps</h3>
     <ol>
         <li>Mix flour and salt together in a bowl. Stir in water to form a soft dough.</li>
@@ -24,6 +30,8 @@
         <li>Heat a griddle over medium-high heat. Cook each dough round on griddle until dough bubbles and blisters appear, about 2 minutes. Flip and cook until lightly browned on the other side.</li>
 
     </ol>
+    </div>
+    </div>
 
 </body>
 </html>
